--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -2484,14 +2484,16 @@ scrollbar {
     background-color: transparent; }
     scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
       margin: 0;
-      min-width: 3px;
-      min-height: 3px;
-      background-color: #3c3c3c;
+      min-width: 6px;
+      min-height: 6px;
+      background-color: shade(#3c3c3c, 0.9);
+      background-image: none;
       border: 1px solid white; }
     scrollbar.overlay-indicator:not(.dragging):not(.hovering) button {
       min-width: 5px;
       min-height: 5px;
-      background-color: #3c3c3c;
+      background-color: shade(#3c3c3c, 0.9);
+      background-image: none;
       background-clip: padding-box;
       border-radius: 100%;
       border: 1px solid white;
@@ -4379,3 +4381,116 @@ TopMenuAppMenuBar menubar > menuitem {
   background-image: linear-gradient(to bottom, shade(#686868, 0.65), shade(#686868, 1.25));
   border: 1px solid shade(#686868, 0.2);
   border-radius: 3px; }
+
+.lightdm-gtk-greeter {
+  /*********
+   * panel *
+   *********/
+  /****************
+   * login window *
+   ****************/ }
+  .lightdm-gtk-greeter #panel_window {
+    background-color: shade(#686868, 0.35);
+    color: #fcfcfc;
+    font-weight: bold;
+    text-shadow: 0 1px transparentize black, 0.5;
+    -gtk-icon-shadow: 0 1px transparentize black, 0.5;
+    box-shadow: inset 0 -1px transparentize black, 0.5; }
+    .lightdm-gtk-greeter #panel_window menubar {
+      background-color: shade(#686868, 0.35);
+      text-shadow: 0 1px transparentize black, 0.5;
+      -gtk-icon-shadow: 0 1px transparentize black, 0.5; }
+      .lightdm-gtk-greeter #panel_window menubar menu menuitem {
+        font-weight: normal;
+        text-shadow: none; }
+  .lightdm-gtk-greeter #login_window,
+  .lightdm-gtk-greeter #shutdown_dialog,
+  .lightdm-gtk-greeter #restart_dialog {
+    border-style: none;
+    border-radius: 5px;
+    background-color: #fcfcfc;
+    color: #3c3c3c;
+    box-shadow: inset 1px 0 shade(#fcfcfc, 0.6), inset -1px 0 shade(#fcfcfc, 0.6), inset 0 1px shade(#fcfcfc, 0.6), inset 0 -1px shade(#fcfcfc, 0.6); }
+    .lightdm-gtk-greeter #login_window button,
+    .lightdm-gtk-greeter #shutdown_dialog button,
+    .lightdm-gtk-greeter #restart_dialog button {
+      padding: 3px 15px;
+      /***********************
+       * login/unlock button *
+       ***********************/
+      /*******************
+       * shutdown button *
+       *******************/
+      /******************
+       * restart button *
+       ******************/ }
+      .lightdm-gtk-greeter #login_window button#login_button,
+      .lightdm-gtk-greeter #shutdown_dialog button#login_button,
+      .lightdm-gtk-greeter #restart_dialog button#login_button {
+        border-color: shade(#398ee7, 0.8);
+        background-image: linear-gradient(to bottom, shade(#398ee7, 1.02), shade(#398ee7, 0.95) 90%, shade(#398ee7, 0.9));
+        color: #ffffff; }
+        .lightdm-gtk-greeter #login_window button#login_button:hover, .lightdm-gtk-greeter #login_window button#login_button:active,
+        .lightdm-gtk-greeter #shutdown_dialog button#login_button:hover,
+        .lightdm-gtk-greeter #shutdown_dialog button#login_button:active,
+        .lightdm-gtk-greeter #restart_dialog button#login_button:hover,
+        .lightdm-gtk-greeter #restart_dialog button#login_button:active {
+          border-color: shade(#398ee7, 0.7);
+          background-image: linear-gradient(to bottom, shade(#398ee7, 1.12), shade(#398ee7, 1.05) 90%, shade(#398ee7, 1)); }
+      .lightdm-gtk-greeter #login_window button#shutdown_button,
+      .lightdm-gtk-greeter #shutdown_dialog button#shutdown_button,
+      .lightdm-gtk-greeter #restart_dialog button#shutdown_button {
+        border-color: shade(#cc0000, 0.8);
+        background-image: linear-gradient(to bottom, shade(#cc0000, 1.02), shade(#cc0000, 0.95) 90%, shade(#cc0000, 0.9));
+        color: #ffffff; }
+        .lightdm-gtk-greeter #login_window button#shutdown_button:hover, .lightdm-gtk-greeter #login_window button#shutdown_button:active,
+        .lightdm-gtk-greeter #shutdown_dialog button#shutdown_button:hover,
+        .lightdm-gtk-greeter #shutdown_dialog button#shutdown_button:active,
+        .lightdm-gtk-greeter #restart_dialog button#shutdown_button:hover,
+        .lightdm-gtk-greeter #restart_dialog button#shutdown_button:active {
+          border-color: shade(#cc0000, 0.7);
+          background-image: linear-gradient(to bottom, shade(#cc0000, 1.12), shade(#cc0000, 1.05) 90%, shade(#cc0000, 1)); }
+      .lightdm-gtk-greeter #login_window button#restart_button,
+      .lightdm-gtk-greeter #shutdown_dialog button#restart_button,
+      .lightdm-gtk-greeter #restart_dialog button#restart_button {
+        border-color: shade(#f57900, 0.8);
+        background-image: linear-gradient(to bottom, shade(#f57900, 1.02), shade(#f57900, 0.95) 90%, shade(#f57900, 0.9));
+        color: #ffffff; }
+        .lightdm-gtk-greeter #login_window button#restart_button:hover, .lightdm-gtk-greeter #login_window button#restart_button:active,
+        .lightdm-gtk-greeter #shutdown_dialog button#restart_button:hover,
+        .lightdm-gtk-greeter #shutdown_dialog button#restart_button:active,
+        .lightdm-gtk-greeter #restart_dialog button#restart_button:hover,
+        .lightdm-gtk-greeter #restart_dialog button#restart_button:active {
+          border-color: shade(#f57900, 0.7);
+          background-image: linear-gradient(to bottom, shade(#f57900, 1.12), shade(#f57900, 1.05) 90%, shade(#f57900, 1)); }
+  .lightdm-gtk-greeter #content_frame {
+    padding-bottom: 14px; }
+  .lightdm-gtk-greeter #login_window menu {
+    border-radius: 1px; }
+  .lightdm-gtk-greeter #login_window combobox button.combo {
+    color: #3c3c3c;
+    padding: 0;
+    background: none;
+    border-style: none;
+    box-shadow: none; }
+  .lightdm-gtk-greeter #login_window #user_combobox {
+    color: #3c3c3c;
+    font: 18px; }
+    .lightdm-gtk-greeter #login_window #user_combobox menu {
+      font: normal; }
+  .lightdm-gtk-greeter #login_window #user_image {
+    padding: 3px;
+    border-radius: 3px;
+    box-shadow: inset 1px 0 shade(#fcfcfc, 0.75), inset -1px 0 shade(#fcfcfc, 0.75), inset 0 1px shade(#fcfcfc, 0.55), inset 0 -1px shade(#fcfcfc, 0.85); }
+  .lightdm-gtk-greeter #login_window #user_image_border {
+    border-radius: 3px;
+    background-image: linear-gradient(to bottom, shade(#fcfcfc, 0.9), shade(#fcfcfc, 0.98) 10%, shade(#fcfcfc, 1) 99%, shade(#fcfcfc, 1));
+    box-shadow: inset 0 1px shade(#fcfcfc, 0.8), inset 0 -1px shade(#fcfcfc, 0.55); }
+  .lightdm-gtk-greeter #buttonbox_frame {
+    padding-top: 20px;
+    padding-bottom: 0px;
+    border-style: none;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-image: linear-gradient(to bottom, shade(#cecece, 0.85), shade(#cecece, 0.98) 10%, shade(#cecece, 1) 99%, shade(#cecece, 1));
+    box-shadow: inset 1px 0 shade(#fcfcfc, 0.6), inset -1px 0 shade(#fcfcfc, 0.6), inset 0 1px shade(#fcfcfc, 0.6), inset 0 -1px shade(#fcfcfc, 0.6); }
